Fixed spacing in nav

--- a/css/main.css
+++ b/css/main.css
@@ -22,8 +22,34 @@ body {
     margin: 0;
 }
 
+.logo {
+    text-align: center;
+}
+
+@media only screen and (min-width: 50em) {
+    
+    .logo {
+        text-align: left;
+    }
+    
+}
 .nav {
     text-align: center;
+    margin-top: 1.5rem;
+}
+
+.nav a {
+    display:inline-block;
+    margin: 0 0.4em;
+}
+
+@media only screen and (min-width: 50em) {
+ 
+    .nav {
+        text-align: right;
+        margin-top: 0;
+    }
+    
 }
 
 .list-group {
